@@ -209,15 +209,14 @@ class Album {
 		foreach ($data as $key=>$value) { $this->$key = $value; } 
 		
 		/* Truncate the string if it's to long */
-	  $this->f_name		= truncate_with_ellipsis($this->name,Config::get('ellipsis_threshold_album'));
+	  	$this->f_name		= truncate_with_ellipsis($this->name,Config::get('ellipsis_threshold_album'));
 
-    //		
-    $this->f_name_link	= "<a href=\"$web_path/albums.php?action=show&amp;album=" . scrub_out($this->id) . "\" title=\"" . scrub_out($this->name) . "\">" . $this->f_name;
+		 $this->f_name_link	= "<a href=\"$web_path/albums.php?action=show&amp;album=" . scrub_out($this->id) . "\" title=\"" . scrub_out($this->name) . "\">" . $this->f_name;
 		// If we've got a disk append it
 		if ($this->disk) { 
 			$this->f_name_link .= " <span class=\"discnb disc" .$this->disk. "\">[" . _('Disk') . " " . $this->disk . "]</span>";
 		} 
-    $this->f_name_link .="</a>";
+		$this->f_name_link .="</a>";
 		
     $this->f_link 		= $this->f_name_link; 
 		$this->f_title		= $name; 
