@@ -4,6 +4,9 @@
 
 --------------------------------------------------------------------------
   v.3.4-Alpha3 
+	- Added XML API borrows authentication style from Last.FM's 
+		scrobbling, allows query of Ampache DB, returns XML
+		see https://ampache.bountysource.com/wiki/xmlapi
 	- Added tweak for Wii so that Flash player opens in current window
 		(Thx Dgn)
 	- Fixed bug where Ampache would incorrectly search for album art
